--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -15,7 +15,7 @@ concurrency:
 
 jobs:
   generic-cpu:
-    name: ${{ matrix.OS }}-${{ matrix.PYTHON_VERSION }}-${{ matrix.GS_BACKEND }}-${{ matrix.GS_USE_NDARRAY == '1' && 'ndarray' || 'field' }}
+    name: ${{ matrix.OS }}-${{ matrix.PYTHON_VERSION }}-${{ matrix.GS_BACKEND }}-${{ matrix.GS_ENABLE_NDARRAY == '0' && 'field' || 'ndarray' }}
 
     strategy:
       fail-fast: false
@@ -24,37 +24,47 @@ jobs:
         OS: ["ubuntu-24.04", "macos-15"]
         PYTHON_VERSION: ["3.10", "3.11", "3.12", "3.13"]
         GS_BACKEND: ["cpu"]
-        GS_USE_NDARRAY: ["0"]
+        GS_ENABLE_NDARRAY: ["1"]
         include:
+          # CPU backend - dynamic array (other OSes)
           - OS: "ubuntu-22.04"
             PYTHON_VERSION: "3.12"
             GS_BACKEND: "cpu"
-            GS_USE_NDARRAY: "0"
+            GS_ENABLE_NDARRAY: "1"
           - OS: "windows-2025"
             PYTHON_VERSION: "3.12"
             GS_BACKEND: "cpu"
-            GS_USE_NDARRAY: "0"
-          - OS: "macos-15"
-            PYTHON_VERSION: "3.12"
-            GS_BACKEND: "gpu"
-            GS_USE_NDARRAY: "0"
+            GS_ENABLE_NDARRAY: "1"
+          # CPU backend - field array
           - OS: "ubuntu-24.04"
             PYTHON_VERSION: "3.12"
             GS_BACKEND: "cpu"
-            GS_USE_NDARRAY: "1"
+            GS_ENABLE_NDARRAY: "0"
+          - OS: "windows-2025"
+            PYTHON_VERSION: "3.12"
+            GS_BACKEND: "cpu"
+            GS_ENABLE_NDARRAY: "0"
+          - OS: "macos-15"
+            PYTHON_VERSION: "3.12"
+            GS_BACKEND: "cpu"
+            GS_ENABLE_NDARRAY: "0"
+          # GPU backend - field array
+          - OS: "macos-15"
+            PYTHON_VERSION: "3.12"
+            GS_BACKEND: "gpu"
+            GS_ENABLE_NDARRAY: "0"
 
     env:
-      HF_HUB_DOWNLOAD_TIMEOUT: 60
-      FORCE_COLOR: 1
-      PY_COLORS: 1
+      HF_HUB_DOWNLOAD_TIMEOUT: "60"
+      FORCE_COLOR: "1"
+      PY_COLORS: "1"
       GS_CACHE_FILE_PATH: ".cache/genesis"
-      GS_USE_NDARRAY: ${{ matrix.GS_USE_NDARRAY }}
-      GS_BETA_PURE: ${{ matrix.GS_USE_NDARRAY }} # we turn on beta pure for ndarray
-      GS_TORCH_FORCE_CPU_DEVICE: "1"
+      GS_ENABLE_NDARRAY: ${{ matrix.GS_ENABLE_NDARRAY }}
+      GS_TORCH_FORCE_CPU_DEVICE: ${{ startsWith(matrix.OS, 'macos-') && '1' || '0' }}
       TI_OFFLINE_CACHE: "1"
       TI_OFFLINE_CACHE_CLEANING_POLICY: "never"
       TI_OFFLINE_CACHE_FILE_PATH: ".cache/taichi"
-      TI_ENABLE_CUDA: "0"
+      TI_ENABLE_CUDA: "1"
       TI_ENABLE_METAL: "1"
       TI_ENABLE_OPENGL: "0"
       TI_ENABLE_VULKAN: "0"
@@ -139,7 +149,7 @@ jobs:
 
       - name: Run unit tests
         run: |
-          pytest -v --logical --dev --backend ${{ matrix.GS_BACKEND }} --forked -m required ./tests
+          pytest -v --logical --dev --backend ${{ matrix.GS_BACKEND }} -m required --forked ./tests
 
       - name: Save Updated Taichi Kernel Cache
         # lets match this version to the black format check
