Update cache saving condition in workflow

--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -143,7 +143,7 @@ jobs:
 
       - name: Save Updated Taichi Kernel Cache
         # lets match this version to the black format check
-        if: ${{ (matrix.OS == 'ubuntu-24.04' || matrix.OS == 'macos-15' || matrix.OS == 'windows-2025') && matrix.PYTHON_VERSION == '3.12' }}
+        if: ${{ always() && (matrix.OS == 'ubuntu-24.04' || matrix.OS == 'macos-15' || matrix.OS == 'windows-2025') && matrix.PYTHON_VERSION == '3.12' }}
         uses: actions/cache/save@v4
         with:
           path: .cache
