--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -81,7 +81,7 @@ jobs:
               pip install --no-input --extra-index-url https://pypi.nvidia.com/ omniverse-kit
               pip install --no-input ".[dev,render,usd]"
 
-              pytest -v --backend gpu --dev ./tests
+              pytest -v --backend gpu --dev --forked ./tests
           EOF
 
       - name: Run benchmarks
