Add back libgl1-mesa-glx just in case

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -68,6 +68,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     wget \
     bash-completion \
     libgl1 \
+    libgl1-mesa-glx \
     libglu1-mesa \
     libegl-dev \
     libegl1 \
