--- a/.github/workflows/alarm.yml
+++ b/.github/workflows/alarm.yml
@@ -54,9 +54,10 @@ jobs:
           WANDB_SILENT: "true"
 
           # --- Parameters ---
-          MAX_REVISIONS: "5"
-          RUNTIME_REGRESSION_TOLERANCE_PCT: "10"
-          COMPILE_REGRESSION_TOLERANCE_PCT: "10"
+          MAX_VALID_REVISIONS: 5
+          MAX_FETCH_REVISIONS: 100
+          RUNTIME_REGRESSION_TOLERANCE_PCT: 10
+          COMPILE_REGRESSION_TOLERANCE_PCT: 10
 
           # Input/Output paths
           ARTIFACTS_DIR: ${{ steps.dl.outputs.download-path }}
@@ -74,7 +75,8 @@ jobs:
 
           tol_rt = float(os.environ["RUNTIME_REGRESSION_TOLERANCE_PCT"])
           tol_ct = float(os.environ["COMPILE_REGRESSION_TOLERANCE_PCT"])
-          max_revisions = int(os.environ["MAX_REVISIONS"])
+          MAX_VALID_REVISIONS = int(os.environ["MAX_VALID_REVISIONS"])
+          MAX_FETCH_REVISIONS = int(os.environ["MAX_FETCH_REVISIONS"])
 
           artifacts_dir = Path(os.environ["ARTIFACTS_DIR"]).expanduser().resolve()
 
@@ -114,6 +116,8 @@ jobs:
               return f"**{s}**" if highlight else s
 
           def status_picto(is_reg):
+              if is_reg is None:
+                  return "ℹ️"
               return "🔴" if is_reg else "✅"
 
           # ----- load artifact (current results) -----
@@ -140,14 +144,19 @@ jobs:
           runs_iter = api.runs(f"{ENTITY}/{PROJECT}", order="-created_at")
 
           records_by_rev = {}
-          for run in runs_iter:
+          for i, run in enumerate(runs_iter):
               # Skip runs did not finish for some reason
               if run.state != "finished":
                   continue
 
+              # Abort if still not complete after checking enough runs.
+              # This would happen if a new benchmark has been added, and not enough past data is available yet.
+              if i == MAX_FETCH_REVISIONS:
+                  continue
+
               # Early return if enough complete records have been collected
               records_is_complete = [sorted(record.keys()) == bids_list for record in records_by_rev.values()]
-              if sum(records_is_complete) == max_revisions:
+              if sum(records_is_complete) == MAX_VALID_REVISIONS:
                   break
 
               # Load config and summary, with support of legacy runs
@@ -158,11 +167,17 @@ jobs:
                   summary = json.loads(summary._json_dict)
 
               # Extract revision commit and branch
-              rev, branch = config["revision"].split("@", 1)
-              assert branch.startswith('Genesis-Embodied-AI/Gen')
+              try:
+                  rev, branch = config["revision"].split("@", 1)
+              except ValueError:
+                  # Ignore this run if the revision has been corrupted for some unknown reason
+                  continue
+              # Ignore runs associated with a commit that is not part of the official repository
+              if not branch.startswith('Genesis-Embodied-AI/'):
+                  continue
 
               # Do not store new records if the desired number of revision is already reached
-              if len(records_by_rev) == max_revisions and rev not in records_by_rev:
+              if len(records_by_rev) == MAX_VALID_REVISIONS and rev not in records_by_rev:
                   break
 
               # Extract benchmark ID and normalize it to make sure it does not depends on key ordering.
@@ -192,12 +207,16 @@ jobs:
           records_by_rev = dict(kv for kv, flag in zip(records_by_rev.items(), records_is_complete) if flag)
 
           def mean_of(metric, bid):
-              tot = 0.0
+              num, tot = 0, 0.0
               for record in records_by_rev.values():
                   val = record[bid].get(metric)
                   if val is not None and not math.isnan(val):
                       tot += val
-              return tot / max_revisions
+                      num += 1
+              if num < MAX_VALID_REVISIONS:
+                  # Refuse the compute stats if data are missing
+                  return float("nan")
+              return tot / MAX_VALID_REVISIONS
 
           # ----- build TWO tables -----
 
@@ -206,12 +225,17 @@ jobs:
           for bid in sorted(current_bm.keys()):
               cur_rt = current_bm[bid]["runtime_fps"]
               cur_ct = current_bm[bid]["compile_time"]
-              base_rt = math.ceil(mean_of("runtime_fps", bid))
-              base_ct = math.ceil(mean_of("compile_time", bid))
+              base_rt = mean_of("runtime_fps", bid)
+              base_ct = mean_of("compile_time", bid)
 
-              d_rt = (cur_rt - base_rt) / base_rt * 100.0
-              d_ct = (cur_ct - base_ct) / base_ct * 100.0
-              is_rt_reg, is_ct_reg = d_rt < -tol_rt, d_ct > tol_ct
+              if math.isfinite(base_rt) and math.isfinite(cur_rt):
+                  cur_rt, base_rt = math.ceil(cur_rt), math.ceil(base_rt)
+                  d_rt = (cur_rt - base_rt) / base_rt * 100.0
+                  d_ct = (cur_ct - base_ct) / base_ct * 100.0
+                  is_rt_reg, is_ct_reg = d_rt < -tol_rt, d_ct > tol_ct
+              else:
+                  d_rt, d_ct = float("nan"), float("nan")
+                  is_rt_reg = None
 
               rows_rt.append([
                   status_picto(is_rt_reg),
@@ -243,7 +267,7 @@ jobs:
 
           # ----- baseline commit list -----
           blist = [f"- Commit {i}: {sha}" for i, sha in enumerate(records_by_rev.keys(), 1)]
-          baseline_block = ["**Baselines considered:** " + f"**{max_revisions}** commits"] + blist
+          baseline_block = ["**Baselines considered:** " + f"**{MAX_VALID_REVISIONS}** commits"] + blist
 
           # ----- CHECK body (always) -----
           check_body = "\n".join(
