--- a/.github/workflows/alarm.yml
+++ b/.github/workflows/alarm.yml
@@ -230,8 +230,8 @@ jobs:
               base_rt = mean_of("runtime_fps", bid)
               base_ct = mean_of("compile_time", bid)
 
-              if math.isfinite(base_rt) and math.isfinite(cur_rt):
-                  cur_rt, base_rt = math.ceil(cur_rt), math.ceil(base_rt)
+              if math.isfinite(base_rt) and math.isfinite(base_ct):
+                  base_rt, base_ct = math.ceil(base_rt), math.ceil(base_ct)
                   d_rt = (cur_rt - base_rt) / base_rt * 100.0
                   d_ct = (cur_ct - base_ct) / base_ct * 100.0
                   is_rt_reg, is_ct_reg = d_rt < -tol_rt, d_ct > tol_ct
