--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     # Used for parsing `.glb` mesh files
     "pygltflib==1.16.0",
     # Used for parsing `.usd` mesh files
-    "usd-core",
+    "usd-core<25.11",
     # Use by `PBD3DEntity.sample` to tetrahedralize a mesh
     "tetgen>=0.6.4",
     # Used for some advanced mesh processing such as `skeletonization`
