--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -115,7 +115,8 @@ jobs:
               source /root/.venv/bin/activate
               pip install --no-input ".[dev,render]"
 
-              pytest --print -x -m "benchmarks" ./tests
+              GS_USE_NDARRAY=1 pytest --print -x -m "benchmarks" ./tests
+              GS_USE_NDARRAY=0 pytest --print -x -m "benchmarks" ./tests
               cat speed_test*.txt > "/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt"
 
               # tmate -S /tmp/tmate.sock wait tmate-exit
