--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -15,9 +15,21 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
   cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
+env:
+  # Note that secrets are not passed to workflows that are triggered by a pull request from a fork
+  HF_TOKEN: ${{ secrets.HF_TOKEN }}
+  HF_HUB_DOWNLOAD_TIMEOUT: 60
+  GENESIS_IMAGE_VER: "1_10"
+  TIMEOUT_MINUTES: 60
+  FORCE_COLOR: 1
+  PY_COLORS: 1
+  MADRONA_DISABLE_CUDA_HEAP_SIZE: "1"
+  OMNI_KIT_ACCEPT_EULA: "yes"
+  OMNI_KIT_ALLOW_ROOT: "1"
+
 jobs:
-  linux-gpu:
-    name: Coreweave-${{ matrix.GS_ENABLE_NDARRAY == '0' && 'field' || 'ndarray' }}
+  unit-tests:
+    name: production-unit_tests-${{ matrix.GS_ENABLE_NDARRAY == '0' && 'field' || 'ndarray' }}
 
     runs-on: [self-hosted, coreweave, genesis-world]
 
@@ -27,27 +39,9 @@ jobs:
       matrix:
         GS_ENABLE_NDARRAY: ["0", "1"]
 
-    env:
-      # Note that secrets are not passed to workflows that are triggered by a pull request from a fork
-      WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
-      HF_TOKEN: ${{ secrets.HF_TOKEN }}
-      HF_HUB_DOWNLOAD_TIMEOUT: 60
-      GENESIS_IMAGE_VER: "1_5"
-      TIMEOUT_MINUTES: 60
-      FORCE_COLOR: 1
-      PY_COLORS: 1
-      MADRONA_DISABLE_CUDA_HEAP_SIZE: "1"
-      OMNI_KIT_ACCEPT_EULA: "yes"
-      OMNI_KIT_ALLOW_ROOT: "1"
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          # Checkout full history is required to shallow cloning while mark HEAD as "grafted". This breaks remote
-          # tracking thereby making it impossible to detect whether a commit is contained in upstream main.
-          fetch-depth: 0
-
       - name: Run unit tests
         if: github.event_name == 'pull_request'
         run: |
@@ -66,7 +60,7 @@ jobs:
           "${HOME}/.cache":/root/.cache,\
           "${{ github.workspace }}":/root/workspace \
             --no-container-mount-home --container-workdir=/root/workspace \
-            --export=NVIDIA_DRIVER_CAPABILITIES=all,BASH_ENV=/root/.bashrc,HF_TOKEN,GS_ENABLE_NDARRAY=${{ matrix.GS_ENABLE_NDARRAY }} \
+            --export=NVIDIA_DRIVER_CAPABILITIES=all,BASH_ENV=/root/.bashrc,HF_TOKEN,GS_ENABLE_NDARRAY=${GS_ENABLE_NDARRAY} \
             --partition=hpc-mid --exclusive --nodes=1 --time="${TIMEOUT_MINUTES}" \
             --job-name=${SLURM_JOB_NAME} \
             bash -e -s << 'EOF'
@@ -83,14 +77,41 @@ jobs:
 
               pytest -v --backend gpu --dev --forked ./tests
           EOF
+      - name: Kill srun job systematically
+        if: always()
+        run: |
+          if [ -n "${SLURM_JOB_NAME}" ] ; then
+            scancel --user=${USER} --name="${SLURM_JOB_NAME}"
+          fi
 
+  benchmarks:
+    name: production-benchmarks-${{ matrix.GS_ENABLE_NDARRAY == '0' && 'field' || 'ndarray' }}
+
+    needs: unit-tests
+    runs-on: [self-hosted, coreweave, genesis-world]
+
+    strategy:
+      matrix:
+        GS_ENABLE_NDARRAY: ["0", "1"]
+
+    env:
+      # Note that secrets are not passed to workflows that are triggered by a pull request from a fork
+      WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
+      GS_ENABLE_NDARRAY: ${{ matrix.GS_ENABLE_NDARRAY }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          # Checkout full history is required to shallow cloning while mark HEAD as "grafted". This breaks remote
+          # tracking thereby making it impossible to detect whether a commit is contained in upstream main.
+          fetch-depth: 0
       - name: Run benchmarks
-        if: matrix.GS_ENABLE_NDARRAY == '0'
         run: |
           SLURM_JOB_NAME="$(uuidgen)_$(date +%Y%m%d_%H%M%S)"
           echo "SLURM_JOB_NAME=${SLURM_JOB_NAME}" >> $GITHUB_ENV
 
-          SLURM_ENV_VARS="NVIDIA_DRIVER_CAPABILITIES=all,BASH_ENV=/root/.bashrc,HF_TOKEN"
+          SLURM_ENV_VARS="NVIDIA_DRIVER_CAPABILITIES=all,BASH_ENV=/root/.bashrc,HF_TOKEN,GS_ENABLE_NDARRAY=${GS_ENABLE_NDARRAY}"
           if [[ "${{ github.repository }}" == 'Genesis-Embodied-AI/Genesis' && "${{ github.ref }}" == 'refs/heads/main' ]] ; then
             SLURM_ENV_VARS="${SLURM_ENV_VARS},WANDB_API_KEY"
           fi
@@ -127,12 +148,10 @@ jobs:
             scancel --user=${USER} --name="${SLURM_JOB_NAME}"
           fi
       - name: Display benchmark stats
-        if: matrix.GS_ENABLE_NDARRAY == '0'
         run: |
           cat "/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt"
       - name: Upload benchmark stats as artifact
-        if: matrix.GS_ENABLE_NDARRAY == '0'
         uses: actions/upload-artifact@v4
         with:
-          name: speed-test-results
+          name: speed-test-${{ matrix.GS_ENABLE_NDARRAY }}
           path: "/mnt/data/artifacts/speed_test_${{ env.SLURM_JOB_NAME }}.txt"
