--- a/.github/workflows/alarm.yml
+++ b/.github/workflows/alarm.yml
@@ -220,9 +220,8 @@ jobs:
                   tot += record[bid][metric]
                   count += 1
               
-              if count == 0:
-                  return float("nan")
-              return tot / count
+              mean = float("nan") if count == 0 else tot / count
+              return mean, count
 
           # ----- build TWO tables -----
 
@@ -231,15 +230,17 @@ jobs:
           for bid in sorted(current_bm.keys()):
               cur_rt = current_bm[bid]["runtime_fps"]
               cur_ct = current_bm[bid]["compile_time"]
-              # [mean_of] returns NaN if no valid baseline is found
-              base_rt = mean_of("runtime_fps", bid)
-              base_ct = mean_of("compile_time", bid)
+              base_rt, base_rt_cnt = mean_of("runtime_fps", bid)
+              base_ct, base_ct_cnt = mean_of("compile_time", bid)
+              is_base_rt_defined = base_rt_cnt == MAX_VALID_REVISIONS
+              is_base_ct_defined = base_ct_cnt == MAX_VALID_REVISIONS
 
               if math.isfinite(base_rt) and math.isfinite(base_ct):
                   base_rt, base_ct = math.ceil(base_rt), math.ceil(base_ct)
                   d_rt = (cur_rt - base_rt) / base_rt * 100.0
                   d_ct = (cur_ct - base_ct) / base_ct * 100.0
-                  is_rt_reg, is_ct_reg = d_rt < -tol_rt, d_ct > tol_ct
+                  is_rt_reg = d_rt < -tol_rt if is_base_rt_defined else None
+                  is_ct_reg = d_ct > tol_ct if is_base_ct_defined else None
               else:
                   d_rt, d_ct = float("nan"), float("nan")
                   is_rt_reg, is_ct_reg = None, None
@@ -248,14 +249,14 @@ jobs:
                   status_picto(is_rt_reg),
                   f"`{bid}`",
                   fmt_num(cur_rt),
-                  fmt_num(base_rt) if not math.isnan(base_rt) else "Not Found",
+                  fmt_num(base_rt) if base_rt_defined else f"Undefined ({fmt_num(base_rt)})",
                   fmt_pct(d_rt, highlight=is_rt_reg)
               ])
               rows_ct.append([
                   status_picto(is_ct_reg),
                   f"`{bid}`",
                   fmt_num(cur_ct),
-                  fmt_num(base_ct) if not math.isnan(base_ct) else "Not Found",
+                  fmt_num(base_ct) if base_ct_defined else f"Undefined ({fmt_num(base_ct)})",
                   fmt_pct(d_ct, highlight=is_ct_reg)
               ])
 
