--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,6 +117,8 @@ render = [
 usd = [
     # Used for parsing `.usd` mesh files
     "usd-core<25.11",
+    # import stubs
+    "types-usd==24.5.2"
 ]
 
 [project.scripts]
