--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -78,7 +78,7 @@ jobs:
               pip install --no-input --extra-index-url https://pypi.nvidia.com/ omniverse-kit
               pip install --no-input ".[dev,render,usd]"
 
-              pytest -v -rs --backend gpu --dev --forked ./tests
+              pytest -v -ra --backend gpu --dev --forked ./tests
           EOF
       - name: Kill srun job systematically
         if: always()
